--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,10 +9,10 @@ log = "0.4.21"
 env_logger = "0.11.3"
 actix-web = "4"
 actix-service = "2.0"
-diesel = { version = "2.0", features = ["postgres", "uuid", "serde_json"] }
+diesel = { version = "2.0", features = ["postgres", "uuid", "serde_json", "chrono"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
 argon2 = "0.5.3"
 jsonwebtoken = "9.3.0"
@@ -23,3 +23,13 @@ shaku = "0.6.1"
 tokio = { version = "1", features = ["full"] }
 rand_core = "0.6"
 password-hash = "0.5"
+
+[dev-dependencies]
+diesel = { version = "2.0", features = ["postgres", "uuid", "serde_json", "chrono", "r2d2"] }
+actix-web = "4.0"
+actix-rt = "2.5"
+serde_json = "1.0"
+
+[lib]
+name = "backend"
+path = "src/lib.rs"
