--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -26,9 +26,11 @@ password-hash = "0.5"
 
 [dev-dependencies]
 diesel = { version = "2.0", features = ["postgres", "uuid", "serde_json", "chrono", "r2d2"] }
+diesel_migrations = "2.2.0"
 actix-web = "4.0"
 actix-rt = "2.5"
 serde_json = "1.0"
+once_cell = "1.19"
 
 [lib]
 name = "backend"
