--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -31,6 +31,7 @@ actix-web = "4.0"
 actix-rt = "2.5"
 serde_json = "1.0"
 once_cell = "1.19"
+reqwest = { version = "0.12", features = ["json"] }
 
 [lib]
 name = "backend"
