--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,6 +8,7 @@ dotenv = "0.15.0"
 log = "0.4.21"
 env_logger = "0.11.3"
 actix-web = "4"
+actix-cors = "0.7"
 actix-service = "2.0"
 diesel = { version = "2.0", features = ["postgres", "uuid", "serde_json", "chrono"] }
 serde = { version = "1.0", features = ["derive"] }
