--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 dotenv = "0.15.0"
 log = "0.4.21"
 env_logger = "0.11.3"
+thiserror = "1.0"
 actix-web = "4"
 actix-cors = "0.7"
 actix-service = "2.0"
