--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,6 +11,7 @@ thiserror = "1.0"
 actix-web = "4"
 actix-cors = "0.7"
 actix-service = "2.0"
+actix-files = "0.6.6"
 diesel = { version = "2.0", features = ["postgres", "uuid", "serde_json", "chrono"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
